--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
 
   db:
     image: postgres:12.0-alpine
+    ports:
+      - "5432:5432"
     volumes:
       - pg_12_data:/var/lib/postfresql@12/data/
       - ./db/create_db.sql:/docker-entrypoint-initdb.d/create_db.sql
